@startuml
'https://plantuml.com/class-diagram

abstract class ToDoList{
    checkText
    removeItem
    completeOrIncomplete
    showComplete
    showInComplete
}

abstract class ToDoController{
    addItem
    removeItem
    clearList
    editItem
    completedOrIncompleteItem
    help
    showCompleted
    showExisting
    showIncomplete
    saveList
    loadList
}

abstract class ToDoApplication{
    start
    main
}

abstract class ToDoView.fxml
abstract class HelpView.fxml

ToDoController <-- ToDoView.fxml
ToDoController <-- HelpView.fxml
ToDoController <-- ToDoList
ToDoApplication <-- ToDoController


@enduml